# sekura-gui

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: django.yml  test-npm.yaml  test-python.yaml  tests.yaml
nginx/: sekura.conf
public/: index.html
sekura/: Dockerfile  docker-automate.sh  docker-exec.sh  docker-run.sh  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
sekura-gui/: Dockerfile  docker-run.sh  package-lock.json  package.json
sekura-gui/public/: manifest.json
sekura-gui/src/: setupTests.js
sekura-gui/src/services/: integration.js  (+3 more)
sekura/sekura/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
sekura/sekura_github/: admin.py  apps.py  models.py  sekura.py
sekura/sekura_github/migrations/: 0001_initial.py
sekura/sekuracore/: __init__.py  admin.py  apps.py  context_processors.py  integrations.py  models.py  serializers.py  signals.py  urls.py  views.py
sekura/sekuracore/migrations/: 0001_initial.py  0002_alter_access_options.py  0002_organization_users.py  0003_alter_agent_preshared_secret.py  0003_integration_description_integration_name.py  0004_alter_agent_parameters_alter_agent_preshared_secret_and_more.py  0004_integration_organization_and_more.py  0005_alter_agent_parameters.py  0006_alter_agent_parameters.py
sekura/sekuracore/templates/: base.html  index.html
sekura/sekuracore/tests/: factories.py  test_integrations.py  test_users.py
src/services/: integration.js  session.js
(+15 files in other folders)
